--- a/src/components/UpdatePost.module.css
+++ b/src/components/UpdatePost.module.css
@@ -1,5 +1,8 @@
 .form {
-  padding-top: 30px;
+  padding: 30px;
+  border: 2px solid black;
+  max-width: 250px;
+  margin: 30px;
 }
 
 .inputs {
@@ -8,9 +11,21 @@
 
 .input {
   margin: 0;
+  border-radius: 5px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .label {
   margin: 0;
   display: block;
+}
+
+.divnewpost {
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+}
+
+.divDelete {
+  padding-top: 30px;
 }
